-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.2.12, 6.5.4
-
-
eb37f665a (108-based)
1. Run "simple browser sample".
2. Open the link - https://sandbox.babylonjs.com/
3. Drag and drop attached glb file
4. Click on icon on bottom right corner (see attached image
5. Click on icon on top right corner (see attached image
6. Browser will crash (Crashes when expanded if inspector window is small
Download the glb file here
https://github.com/KhronosGroup/glTF-Sample-Models/blob/main/2.0/Duck/glTF-Binary/Duck.glb
For Gerrit Dashboard: QTBUG-123221 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
553798,2 | Fix null pointer derefence crash | 108-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |