Fix null pointer derefence crash

We were derefencing WebContentsImpl::web_preferences_ without checking.

Original patch by Kaloyan Chehlarski <kaloyan.chehlarski@qt.io>

Fixes: QTBUG-123221
Change-Id: I61c2cfbed32c337c2bbe740f66a77ccc8c07da60
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/553798
Reviewed-by: Michal Klocek <michal.klocek@qt.io>